--- a/sprint_1/prototype/6.12.1.4-tra-cuu-hoa-don/6.12.1.4-tra-cuu-hoa-don.html
+++ b/sprint_1/prototype/6.12.1.4-tra-cuu-hoa-don/6.12.1.4-tra-cuu-hoa-don.html
@@ -2,7 +2,7 @@
 <html lang="en">
 <head>
     <meta charset="UTF-8">
-    <title>Title</title>
+    <title>Tra cứu hóa đơn</title>
     <link href="https://fonts.googleapis.com/css2?family=Kaushan+Script&family=Montserrat:wght@400;700&family=Roboto&display=swap"
           rel="stylesheet">
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.1.1/css/all.min.css">
@@ -12,84 +12,134 @@
     <link rel="stylesheet" href="../bootstrap-4.6.1-dist/css/bootstrap.min.css">
 </head>
 <body>
-<div class="container-fluid">
-    <h2 class="text-center">Tra cứu</h2>
+<div class="container-fluid text-center" style="height: 130px; background-color: #30d19d; color: white"> header chiều
+    cao 130px
+</div>
+<div class="container-fluid my-2">
     <div class="bg-white py-2 rounded-lg">
-        <h5 class="p-2">Thông tin tra cứu</h5>
-        <form class="form-inline p-1">
-            <div class="form-group mb-2">
-                <label for="tracuu" class="col my-1 mr-2">Tra cứu theo</label>
-                <select class="col form-control" id="tracuu" value="email@example.com">
-                    <option class="form-control"> Hóa đơn</option>
-                    <option class="form-control"> Thông tin thuốc</option>
-                    <option class="form-control"> Thông tin nhà cung cấp</option>
-                    <option class="form-control"> Thông tin khách hàng</option>
-                </select>
-            </div>
-            <div class="form-group mx-sm-3 mb-2">
-                <input type="password" class="form-control" id="mahoadown" placeholder="Mã hóa đơn">
-            </div>
-            <div class="form-group mx-sm-3 mb-2">
-                <input type="password" class="form-control" id="tenkhachhang" placeholder="Tên khách hàng">
-            </div>
-            <div>
-                <button type="submit" class="btn btn-success mb-2 mr-sm-2">
-                    <i class="fa-solid fa-magnifying-glass mr-2"></i>
-                    Tra cứu
-                </button>
-                <button type="submit" class="btn btn-secondary mb-2">
-                    <i class="fa-solid fa-rotate-left mr-2"></i>
-                    Trở về
-                </button>
+        <h5 class="p-2">Thông tin tra cứu hóa đơn</h5>
+        <form>
+            <div class="row px-3">
+                <div class="col-md-6 col-sm-12">
+                    <div class="row px-3">
+                        <label class="col-md-2 col-sm-12 my-1 mr-2">Tra cứu theo</label>
+                        <input type="password" class="form-control col-md-4 mr-2 col-sm-12 my-1" id="mahoadown"
+                               placeholder="Mã hóa đơn">
+                        <input type="password" class="form-control col-md-5 mr-2 col-sm-12 my-1" id="tenkhachhang"
+                               placeholder="Tên khách hàng">
+                    </div>
+                </div>
+                <div class="col-md-6 col-sm-12">
+                    <div class="float-md-right float-sm-left">
+                        <button type="submit" class="btn btn-success mb-2 mr-2 my-1">
+                            <i class="fa-solid fa-magnifying-glass mr-2"></i>
+                            Tra cứu
+                        </button>
+                        <button type="submit" class="btn btn-secondary mb-2 mr-2 my-1">
+                            <i class="fa-solid fa-rotate-left mr-2"></i>
+                            Trở về
+                        </button>
+                    </div>
+
+                </div>
             </div>
         </form>
     </div>
     <div class="bg-white mt-3 rounded-lg">
         <div class="p-2">
             <h5 class="p-2">Kết quả tra cứu</h5>
-            <table class="table table-striped">
-                <thead class="table-success">
-                <tr>
-                    <th scope="col" class="col-1">Mã hóa đơn</th>
-                    <th scope="col" class="col-3">Khách hàng</th>
-                    <th scope="col" class="col-2">Ngày lập</th>
-                    <th scope="col" class="col-2">Giờ lập</th>
-                    <th scope="col" class="col-2">Tổng tiền</th>
-                    <th scope="col" class="col-2">Ghi chú</th>
-                </tr>
-                </thead>
-                <tbody>
-                <tr>
-                    <td>HD0001</td>
-                    <td>Phạm Việt Khoa</td>
-                    <td>22/06/2022</td>
-                    <td>08:00:00</td>
-                    <td>1.000.000 VNĐ</td>
-                    <td>ghi chú</td>
-                </tr>
-                <tr>
-                    <td>HD0002</td>
-                    <td>Phan An</td>
-                    <td>20/06/2022</td>
-                    <td>12:00:00</td>
-                    <td>1.500.000 VNĐ</td>
-                    <td>Một vài ghi chú</td>
-                </tr>
-                <tr>
-                    <td>HD0003</td>
-                    <td>Nguyễn Trần Thanh Nghĩa</td>
-                    <td>15/05/2022</td>
-                    <td>13:00:00</td>
-                    <td>500.000 VNĐ</td>
-                    <td>Đây ghi chú</td>
-                </tr>
+            <div class="table-responsive">
+                <table class="table table-hover">
+                    <thead class="table-success">
+                    <tr>
+                        <th scope="col" class="col-1">Mã hóa đơn</th>
+                        <th scope="col" class="col-3">Khách hàng</th>
+                        <th scope="col" class="col-2">Ngày lập</th>
+                        <th scope="col" class="col-2">Giờ lập</th>
+                        <th scope="col" class="col-2">Tổng tiền (VNĐ)</th>
+                        <th scope="col" class="col-2">Ghi chú</th>
+                    </tr>
+                    </thead>
+                    <tbody>
+                    <tr>
+                        <td>HD0001</td>
+                        <td>Phạm Việt Khoa</td>
+                        <td>22/06/2022</td>
+                        <td>08:00:00</td>
+                        <td>1.000.000</td>
+                        <td>ghi chú</td>
+                    </tr>
+                    <tr>
+                        <td>HD0002</td>
+                        <td>Phan An</td>
+                        <td>20/06/2022</td>
+                        <td>12:00:00</td>
+                        <td>1.500.000</td>
+                        <td>Một vài ghi chú</td>
+                    </tr>
+                    <tr>
+                        <td>HD0003</td>
+                        <td>Nguyễn Trần Thanh Nghĩa</td>
+                        <td>15/05/2022</td>
+                        <td>13:00:00</td>
+                        <td>500.000</td>
+                        <td>Đây ghi chú</td>
+                    </tr>
+                    <tr>
+                        <td>HD0004</td>
+                        <td>Khách lẻ</td>
+                        <td>20/05/2022</td>
+                        <td>11:00:00</td>
+                        <td>800.000</td>
+                        <td>Đây ghi chú</td>
+                    </tr>
+                    <tr>
+                        <td>HD0005</td>
+                        <td>Khách lẻ</td>
+                        <td>14/05/2022</td>
+                        <td>08:00:00</td>
+                        <td>100.000</td>
+                        <td>Đây ghi chú</td>
+                    </tr>
+                    <tr>
+                        <td>HD0006</td>
+                        <td>Lê Quang Anh Đà</td>
+                        <td>13/05/2022</td>
+                        <td>16:00:00</td>
+                        <td>600.000</td>
+                        <td>Đây ghi chú</td>
+                    </tr>
 
-                </tbody>
-            </table>
+                    </tbody>
+                </table>
+            </div>
         </div>
-
+        <!--          paging-->
+        <nav class="d-flex justify-content-center py-3">
+            <ul class="pagination">
+                <li class="page-item px-1 disabled">
+                    <a href="#" class="page-link">Trang trước</a>
+                </li>
+                <li class="page-item disabled">
+                    <a class="page-link">
+                        <span>1</span>
+                        <span>/</span>
+                        <span>1</span>
+                    </a>
+                </li>
+                <li class="page-item px-1">
+                    <a href="#" class="page-link">Trang sau</a>
+                </li>
+            </ul>
+        </nav>
+        <!--          paging-->
     </div>
 </div>
+
+<div class="container-fluid text-center" style="height: 142px; background-color: #818182; color: white"> footer chiều
+    cao 142px
+</div>
+
 </body>
 </html>
 <script src="https://cdn.jsdelivr.net/npm/jquery@3.5.1/dist/jquery.slim.min.js"
